[package]
name = "revelation_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.0", features=["derive"] }

aes = "0.8.2"
cbc = "0.1.2"
chrono = "0.4.23"
compress = "0.2.1"
hmac = "0.12.1"
pbkdf2 = { version = "0.11.0", default-features = false }
pkcs7 = "0.3.0"
regex = "1.7.0"
roxmltree = "0.16.0"
rpassword = "7.2.0"
sha1 = "0.10.5"
sha2 = "0.10.6"
